--- a/dev/scss/global/_default.scss
+++ b/dev/scss/global/_default.scss
@@ -4,11 +4,19 @@
 }
 
 body{
-	color: #dadada;
-	background-color: #202020;
+	color: $black;
+	font-size: 12px;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, section, div, nav, ul, li, button{
 	margin: 0;
 	padding: 0;
+}
+
+#main-wrapper{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
