--- a/dev/scss/views/_home.scss
+++ b/dev/scss/views/_home.scss
@@ -1,3 +1,211 @@
-#home{
-	color: orange;
+.index-wrapper{
+	width: 100%;
+	height: 100%;
+}
+
+// shader wrapper
+.bg-wrapper-shader{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top:0;
+	left: 0;
+	background-repeat: no-repeat;
+	background-position: center top;
+	background-size: cover;
+	
+	&.home-bg{
+		background-image: url("../img/Desert.png");
+	}
+}
+
+// display WE
+.display-wrapper{
+	width: 250px;
+	height: 134px;
+	// background-color: cyan;
+	position: absolute;
+	margin: auto;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	@media (min-width: 768px){
+		width: 600px;
+		height: 218px;
+	}
+	.display-type{
+		width: 100%;
+		height: 100%;
+		white-space: nowrap;
+		position: relative;
+		h2{
+			font-size: 165px;
+			font-family: 'Nocturne Serif ExtraBold';
+			display: inline-block;
+			position: absolute;
+			height: 91px;
+			@media (min-width: 768px){
+				font-size: 396px;
+				height: 100%;
+			}
+		}
+		.display-w{
+			padding-left: 4px;
+			line-height: .33em;
+			// background-color: red;
+			@media (min-width: 768px){
+				padding-left: 10px;
+				top: -1px;
+			}
+		}
+		.display-e{
+			right: -3px;
+			line-height: .35em;
+			// background-color: green;
+			@media (min-width: 768px){
+				right: -8px;
+				top: -1px;
+			}
+		}
+	}
+
+// Title
+	.title-wrapper{
+		width: 112px;
+		height: 46px;
+		// background-color: green;
+		position: absolute;
+		top: 12px;
+		left: 25px;
+		@media(min-width: 768px){
+			top: 30px;
+			left: 0;
+			width: 286px;
+			height: 92px;
+		}
+
+// span section
+		.span-container{
+			position: relative;
+			width: 100%;
+			height: 100%;
+			font-family: 'Nocturne Serif ExtraBold';
+			font-size: 28px;
+			color: $cream;
+			@media(min-width: 768px){
+				font-size: 62px;
+			}
+			span{
+				position: absolute;
+				line-height: 0;
+				// Create
+				&:first-child{
+					display: inline-block;
+					top: 9px;
+					left: 0px;
+				}
+				// &
+				&:nth-child(2){
+					font-family: 'TitlingGothicFB light';
+					font-size: 15px;
+					top: 14px;
+					right: 0;
+				}
+				// Consult
+				&:last-child{
+					bottom: 11px;
+					left: 0;
+				}
+				@media(min-width: 768px){
+					&:first-child{
+						display: block;
+						width: 100%;
+						top: 20px;
+						left: 0;
+					}
+					&:nth-child(2){
+						font-size: 32px;
+						left: 0;
+						bottom: 14px;
+						top: inherit;
+					}
+					&:last-child{
+						right: 0;
+						bottom: 24px;
+						left:inherit;
+					}
+				}
+			}
+
+// line decoration
+			&:before{
+				content:"";
+				width: 2px;
+				height: 56px;
+				background-color: #fff;
+				position: absolute;
+				bottom: -76px;
+				left: 50%;
+				transform: translate(-50%)
+			}
+			@media(min-width: 768px){
+				&:before{
+					height: 90px;
+					bottom: -45px;
+					left: auto;
+					right: -58px;
+					transform: rotate(90deg) translateX(-50%);
+				}
+			}
+		}
+	}
+
+	// information about
+	p.about-title{
+		color: $cream;
+		font-size: 10px;
+		font-family: 'TitlingGothicFB light';
+		// letter-spacing: 20%;
+		width: 95px;
+		height: 56px;
+		display: inline-block;
+		position: absolute;
+		bottom: 1px;
+		right: 5px;
+		letter-spacing: .02em;
+		span{
+			letter-spacing: .05em;
+		}
+		&:before{
+			content: "..";
+			font-family: 'Nocturne Serif ExtraBold';
+			position: absolute;
+			right: 0;
+			bottom: 0;
+			font-size: 12px;
+			letter-spacing: 2px;
+			line-height: 0;
+			// transform: translateY(-4px);
+			width: 10px;
+			height: 4px;
+			// background: red;
+			display: inline-block;
+		}
+		@media(min-width: 768px){
+			width: 200px;
+			height: 45px;
+			font-size: 14px;
+			right: -4px;
+			bottom: 30px;
+			line-height: 16px;
+			// background-color: red;
+			br{
+				display: none;
+			}
+			&:before{
+				right: 4px;
+			}
+		}
+	}
 }
