Home UI: Padding y altura de contenedores del header no era necesaria. El link de 'our work' ya está ligado con los documentos de html.

--- a/dev/assets/_modules/header.pug
+++ b/dev/assets/_modules/header.pug
@@ -1,6 +1,8 @@
 header.snj-container-fluid
 	.row
 		#header-wrapper.snj-col-12
-			+logo-jb
+			a(href="/")
+				+logo-jb
+
 			include ../_modules/nav.pug
-			a.link-page.line-link(href="") About Us
+			a.link-page.line-link(href="#") About Us
