--- a/dev/assets/_modules/icons.pug
+++ b/dev/assets/_modules/icons.pug
@@ -23,36 +23,36 @@ mixin back-icon-btn
 
 mixin next-arrow-90
 	svg(xmlns="http://www.w3.org/2000/svg" width="90px" height="12px" viewBox="0 0 90 12")
-		path(class="cls-1" d="M84.72,11.71l5-5a1,1,0,0,0,0-1.42l-5-5a1,1,0,0,0-1.42,0h0a1,1,0,0,0,0,1.42L87.59,6,83.3,10.29a1,1,0,0,0,0,1.42h0A1,1,0,0,0,84.72,11.71Z")
-		rect(class="cls-1" y="5" width="81.99" height="2" rx="1" ry="1")
+		path(d="M84.72,11.71l5-5a1,1,0,0,0,0-1.42l-5-5a1,1,0,0,0-1.42,0h0a1,1,0,0,0,0,1.42L87.59,6,83.3,10.29a1,1,0,0,0,0,1.42h0A1,1,0,0,0,84.72,11.71Z")
+		rect(y="5" width="81.99" height="2" rx="1" ry="1")
 
 mixin next-arrow-300
 	svg(xmlns="http://www.w3.org/2000/svg" width="300px" height="12px" viewBox="0 0 300 12")
-		path(class="cls-1" d="M294.72,11.71l5-5a1,1,0,0,0,0-1.42l-5-5a1,1,0,0,0-1.42,0h0a1,1,0,0,0,0,1.42L297.59,6l-4.29,4.28a1,1,0,0,0,0,1.42h0A1,1,0,0,0,294.72,11.71Z")
-		rect(class="cls-1" y="5" width="291.99" height="2" rx="1" ry="1")
+		path(d="M294.72,11.71l5-5a1,1,0,0,0,0-1.42l-5-5a1,1,0,0,0-1.42,0h0a1,1,0,0,0,0,1.42L297.59,6l-4.29,4.28a1,1,0,0,0,0,1.42h0A1,1,0,0,0,294.72,11.71Z")
+		rect(y="5" width="291.99" height="2" rx="1" ry="1")
 
 mixin arrow-scroll
 	svg(xmlns="http://www.w3.org/2000/svg" width="12px" height="7px" viewBox="0 0 12 7.01")
-		path(class="cls-1" d="M.29,1.73l5,5a1,1,0,0,0,1.42,0l5-5a1,1,0,0,0,0-1.42h0a1,1,0,0,0-1.42,0L6,4.6,1.71.31A1,1,0,0,0,.29.31h0A1,1,0,0,0,.29,1.73Z")
+		path(d="M.29,1.73l5,5a1,1,0,0,0,1.42,0l5-5a1,1,0,0,0,0-1.42h0a1,1,0,0,0-1.42,0L6,4.6,1.71.31A1,1,0,0,0,.29.31h0A1,1,0,0,0,.29,1.73Z")
 
 //- video player icons
 mixin video-play-icon
 	svg(xmlns="http://www.w3.org/2000/svg" width="17px" height="32px" viewBox="0 0 17.01 32.01")
-		path(class="cls-1" d="M.29,31.71h0a1,1,0,0,1,0-1.41L14.6,16,.31,1.71A1,1,0,0,1,.31.29h0a1,1,0,0,1,1.42,0l15,15a1,1,0,0,1,0,1.41l-15,15A1,1,0,0,1,.29,31.71Z")
+		path(d="M.29,31.71h0a1,1,0,0,1,0-1.41L14.6,16,.31,1.71A1,1,0,0,1,.31.29h0a1,1,0,0,1,1.42,0l15,15a1,1,0,0,1,0,1.41l-15,15A1,1,0,0,1,.29,31.71Z")
 
 mixin video-pause-icon
 	svg(xmlns="http://www.w3.org/2000/svg" width="22px" height="32px" viewBox="0 0 21.69 32")
-		rect(class="cls-1" x="19.69" width="2" height="32" rx="1" ry="1")
-		rect(class="cls-1" width="2" height="32" rx="1" ry="1")
+		rect(x="19.69" width="2" height="32" rx="1" ry="1")
+		rect(width="2" height="32" rx="1" ry="1")
 
 mixin video-exit-icon
 	svg(xmlns="http://www.w3.org/2000/svg" width="32px" height="32px" viewBox="0 0 32 32")
-		rect(class="cls-1" x="15" y="-6.21" width="2" height="44.43" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
-		rect(class="cls-1" x="-6.21" y="15" width="44.43" height="2" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
+		rect(x="15" y="-6.21" width="2" height="44.43" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
+		rect(x="-6.21" y="15" width="44.43" height="2" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
 mixin video-exit-icon
 	svg(xmlns="http://www.w3.org/2000/svg" width="32px" height="32px" viewBox="0 0 32 32")
-		rect(class="cls-1" x="15" y="-6.21" width="2" height="44.43" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
-		rect(class="cls-1" x="-6.21" y="15" width="44.43" height="2" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
+		rect(x="15" y="-6.21" width="2" height="44.43" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
+		rect(x="-6.21" y="15" width="44.43" height="2" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
 
 //- social media icons
 mixin ins-icon
