--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -16,6 +16,7 @@ block content
 						+next-arrow-300
 						span See case
 				//- +project-wrapper("03", "Digital /", " Web Design")
-			button.btn-wrapper.btn-pages
-				span.btn-animate-up
-					+close-icon
+			
+	button.btn-wrapper.btn-pages(onclick="history.back()")
+		span.btn-animate-up
+			+close-icon
