--- a/dev/scss/modules/_header.scss
+++ b/dev/scss/modules/_header.scss
@@ -5,20 +5,24 @@ header{
 #header-wrapper{
 	// margin-top: 40px;
 	width: 100%;
-	height: 40px;
 	// background-color: red;
-	padding: 13px 0px;
+	padding-top: 13px;
+
+	@media (min-width: 768px){
+		padding-top: 40px;
+	}
+
 	svg.logo-jb{
 		width: 96px;
-		height: 14px;
+
+		@media (min-width: 768px){
+			width: 134px;
+		}
 	}
 	a.link-page{
 		display: none;
-	}
-	@media (min-width: 768px){
-		padding: 40px 0;
-		height: 94px;
-		a.link-page{
+
+		@media (min-width: 768px){
 			display: inline-block;
 		}
 	}
