--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -31,4 +31,6 @@ html(class='no-js')
 			block content
 			
 		//- scripts
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.min.js')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js')
 		script(src='js/app.js')
