--- a/dev/assets/_modules/icons.pug
+++ b/dev/assets/_modules/icons.pug
@@ -34,14 +34,19 @@ mixin next-arrow-300
 mixin arrow-scroll
 	svg(xmlns="http://www.w3.org/2000/svg" width="12px" height="7px" viewBox="0 0 12 7.01")
 		path(d="M.29,1.73l5,5a1,1,0,0,0,1.42,0l5-5a1,1,0,0,0,0-1.42h0a1,1,0,0,0-1.42,0L6,4.6,1.71.31A1,1,0,0,0,.29.31h0A1,1,0,0,0,.29,1.73Z")
+			
+//- arrow icpon
+mixin icon-arrow
+	svg(xmlns="http://www.w3.org/2000/svg" width="7.01px" height="12.01px" viewBox="0 0 7.01 12.01")
+		path(d="M1.72,11.72l5-5a1,1,0,0,0,0-1.42h0l-5-5A1,1,0,0,0,.3.29h0a1,1,0,0,0,0,1.41h0L4.59,6,.3,10.3a1,1,0,0,0,0,1.41h0a1,1,0,0,0,1.41,0Z")
 
 //- video player icons
 mixin video-play-icon
-	svg(xmlns="http://www.w3.org/2000/svg" width="17px" height="32px" viewBox="0 0 17.01 32.01")
+	svg(xmlns="http://www.w3.org/2000/svg" width="17.01px" height="32.01px" viewBox="0 0 17.01 32.01")
 		path(d="M.29,31.71h0a1,1,0,0,1,0-1.41L14.6,16,.31,1.71A1,1,0,0,1,.31.29h0a1,1,0,0,1,1.42,0l15,15a1,1,0,0,1,0,1.41l-15,15A1,1,0,0,1,.29,31.71Z")
 
 mixin video-pause-icon
-	svg(xmlns="http://www.w3.org/2000/svg" width="22px" height="32px" viewBox="0 0 21.69 32")
+	svg(xmlns="http://www.w3.org/2000/svg" width="21.69px" height="32px" viewBox="0 0 21.69 32")
 		rect(x="19.69" width="2" height="32" rx="1" ry="1")
 		rect(width="2" height="32" rx="1" ry="1")
 
