--- a/dev/assets/_modules/project-mixin.pug
+++ b/dev/assets/_modules/project-mixin.pug
@@ -1,11 +1,10 @@
-extends _templates/layout.pug
-
-block content
-	mixin project-wrapper(number, name1, name2)
+mixin project-intro(number, name1, name2)
+	.project-wrapper
 		p.number-project #{number}
 		.name-project 
 			h2 #{name1}
 			h2 #{name2}
 		a.arrow-right-long(href="")
-			+next-arrow-300
+			.rectangle-arrow
+			+icon-arrow
 			span See case
