--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -25,7 +25,7 @@ html(class='no-js')
 		include ../_modules/icons.pug
 		include ../_modules/header.pug
 		include ../_modules/footer.pug
-		//- include ../_modules/project-mixin.pug
+		include ../_modules/project-mixin.pug
 		//- content
 		#main-wrapper
 			block content
