Ourwork responsivo listo, hovers listos. Iniciando About, mobile layout casi listo, creciendo area sensible del nav derecho.

--- a/dev/assets/_modules/header.pug
+++ b/dev/assets/_modules/header.pug
@@ -1,8 +1,8 @@
 header.snj-container-fluid
 	.row
 		#header-wrapper.snj-col-12
-			a(href="/")
+			a.logo-wrapper(href="/")
 				+logo-jb
 
 			include ../_modules/nav.pug
-			a.link-page.line-link(href="#") About Us
+			a.link-page.line-link(href="about.html") About Us
