--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -15,6 +15,7 @@
 
 @import 'views/_home';
 @import 'views/_ourwork';
+@import 'views/_about';
 
 @import 'modules/_header';
 @import 'modules/_nav';
