--- a/dev/assets/_modules/icons.pug
+++ b/dev/assets/_modules/icons.pug
@@ -37,7 +37,7 @@ mixin arrow-scroll
 			
 //- arrow icpon
 mixin icon-arrow
-	svg(xmlns="http://www.w3.org/2000/svg" width="7.01px" height="12.01px" viewBox="0 0 7.01 12.01")
+	svg.icon-arrow(xmlns="http://www.w3.org/2000/svg" width="7.01px" height="12.01px" viewBox="0 0 7.01 12.01")
 		path(d="M1.72,11.72l5-5a1,1,0,0,0,0-1.42h0l-5-5A1,1,0,0,0,.3.29h0a1,1,0,0,0,0,1.41h0L4.59,6,.3,10.3a1,1,0,0,0,0,1.41h0a1,1,0,0,0,1.41,0Z")
 
 //- video player icons
@@ -60,20 +60,22 @@ mixin video-exit-icon
 		rect(x="-6.21" y="15" width="44.43" height="2" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
 
 //- social media icons
+//- instagram
 mixin ins-icon
 	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24" viewBox="0 0 24 24")
-		ellipse(cx="17.33" cy="6.59" rx="1.21" ry="1.2")
-		path(d="M11.98,6.81c-2.79,0-5.12,2.26-5.12,5.11c0,2.78,2.26,5.11,5.12,5.11s5.2-2.26,5.2-5.11S14.77,6.81,11.98,6.81z M11.98,15.23c-1.83,0-3.32-1.48-3.32-3.31c0-1.83,1.48-3.31,3.32-3.31s3.32,1.48,3.32,3.31C15.29,13.75,13.81,15.23,11.98,15.23z")
-		path(d="M20.42,3.65C19.36,2.6,17.93,2,16.2,2H7.91C4.37,2,2.03,4.41,2.03,7.86v8.27c0,1.73,0.53,3.23,1.66,4.29 C4.75,21.47,6.25,22,7.91,22h8.21c1.66,0,3.16-0.53,4.22-1.58S22,17.86,22,16.14V7.86C22,6.14,21.47,4.71,20.42,3.65z M20.19,16.14 c0,1.2-0.38,2.26-1.13,2.93c-0.68,0.68-1.73,1.05-2.94,1.05H7.91c-1.21,0-2.19-0.38-2.94-1.05c-0.75-0.75-1.13-1.8-1.13-3.01V7.79 c0-1.2,0.38-2.26,1.05-2.93C5.57,4.18,6.63,3.8,7.83,3.8h8.29c1.28,0,2.26,0.38,3.01,1.13c0.68,0.75,1.05,1.73,1.05,2.93V16.14z")
+		ellipse(cx="18.4" cy="5.5" rx="1.5" ry="1.4")
+		path(d="M12,5.8c-3.3,0-6.1,2.7-6.1,6.1c0,3.3,2.7,6.1,6.1,6.1s6.2-2.7,6.2-6.1S15.3,5.8,12,5.8z M12,15.9c-2.2,0-4-1.8-4-4s1.8-4,4-4s4,1.8,4,4C15.9,14.1,14.2,15.9,12,15.9z")
+		path(d="M22.1,2c-1.3-1.3-3-2-5.1-2H7.1C2.8,0,0,2.9,0,7V17c0,2.1,0.6,3.9,2,5.1C3.3,23.4,5.1,24,7.1,24h9.9c2,0,3.8-0.6,5.1-1.9c1.3-1.3,2-3.1,2-5.1V7C24,5,23.4,3.3,22.1,2z M21.8,17c0,1.4-0.5,2.7-1.4,3.5c-0.8,0.8-2.1,1.3-3.5,1.3H7.1c-1.5,0-2.6-0.5-3.5-1.3c-0.9-0.9-1.4-2.2-1.4-3.6V6.9c0-1.4,0.5-2.7,1.3-3.5C4.3,2.6,5.6,2.2,7,2.2h9.9c1.5,0,2.7,0.5,3.6,1.4c0.8,0.9,1.3,2.1,1.3,3.5L21.8,17L21.8,17z")
 
+//- linkedin
 mixin link-icon
 	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24" viewBox="0 0 24 24" xml:space="preserve")
-		path(d="M20.52,2H3.48C2.66,2,2,2.65,2,3.44v17.11C2,21.35,2.66,22,3.48,22h17.05c0.82,0,1.48-0.65,1.48-1.44V3.44 C22,2.65,21.34,2,20.52,2z M7.93,19.04H4.96V9.5h2.97V19.04z M6.45,8.19c-0.95,0-1.72-0.77-1.72-1.72c0-0.95,0.77-1.72,1.72-1.72 c0.95,0,1.72,0.77,1.72,1.72C8.17,7.42,7.4,8.19,6.45,8.19z M19.04,19.04h-2.97V14.4c0-1.11-0.02-2.53-1.54-2.53 c-1.54,0-1.78,1.21-1.78,2.45v4.72H9.79V9.5h2.84v1.3h0.04c0.4-0.75,1.36-1.54,2.81-1.54c3,0,3.56,1.98,3.56,4.55V19.04z")
+		path(d="M22.1,0H1.8C0.8,0,0,0.8,0,1.7v20.4c0,1,0.8,1.7,1.8,1.7h20.4c1,0,1.8-0.8,1.8-1.7V1.7C23.9,0.8,23.1,0,22.1,0zM7.1,20.4H3.5V9h3.5C7.1,9,7.1,20.4,7.1,20.4zM5.3,7.4c-1.1,0-2.1-0.9-2.1-2.1s0.9-2.1,2.1-2.1s2.1,0.9,2.1,2.1S6.4,7.4,5.3,7.4z M20.4,20.4h-3.5v-5.5c0-1.3,0-3-1.8-3c-1.8,0-2.1,1.4-2.1,2.9v5.6H9.3V9h3.4v1.6h0c0.5-0.9,1.6-1.8,3.4-1.8c3.6,0,4.3,2.4,4.3,5.4C20.4,14.1,20.4,20.4,20.4,20.4z")
 
+//- twitter
 mixin tw-icon
-	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-		 viewBox="0 0 24 24" xml:space="preserve")
-		path(d="M19.95,7.99c0.01,0.17,0.01,0.35,0.01,0.52C19.96,13.85,15.84,20,8.29,20C5.97,20,3.82,19.33,2,18.19 c0.32,0.04,0.65,0.06,0.98,0.06c1.92,0,3.69-0.65,5.1-1.73c-1.8-0.03-3.31-1.2-3.83-2.81c0.25,0.05,0.51,0.07,0.77,0.07 c0.37,0,0.74-0.05,1.08-0.14c-1.88-0.37-3.29-2-3.29-3.96c0-0.02,0-0.03,0-0.05c0.55,0.3,1.19,0.48,1.86,0.51 c-1.1-0.73-1.83-1.96-1.83-3.36c0-0.74,0.2-1.43,0.56-2.03c2.02,2.44,5.05,4.05,8.46,4.22c-0.07-0.29-0.11-0.6-0.11-0.92 c0-2.23,1.84-4.04,4.1-4.04c1.18,0,2.25,0.49,2.99,1.28c0.93-0.18,1.81-0.52,2.61-0.98c-0.31,0.94-0.96,1.74-1.81,2.23 c0.83-0.1,1.62-0.32,2.36-0.64C21.45,6.7,20.75,7.42,19.95,7.99z")
+	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30.01px" height="24" viewBox="0 0 30.1 24" xml:space="preserve")
+		path(d="M27,6c0,0.3,0,0.5,0,0.8c0,8-6.2,17.2-17.5,17.2c-3.5,0-6.7-1-9.4-2.7c0.5,0.1,1,0.1,1.5,0.1c2.9,0,5.5-1,7.7-2.6c-2.7,0-5-1.8-5.7-4.2c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.1-0.1,1.6-0.2c-2.8-0.6-4.9-3-4.9-5.9c0,0,0,0,0-0.1c0.8,0.5,1.8,0.7,2.8,0.8c-1.7-1.1-2.7-2.9-2.7-5c0-1.1,0.3-2.1,0.8-3c3,3.7,7.6,6.1,12.7,6.3c-0.1-0.4-0.2-0.9-0.2-1.4c0-3.3,2.8-6.1,6.2-6.1c1.8,0,3.4,0.7,4.5,1.9c1.4-0.3,2.7-0.8,3.9-1.5c-0.5,1.4-1.4,2.6-2.7,3.3c1.2-0.2,2.4-0.5,3.5-1C29.3,4,28.2,5.1,27,6z")
 //- logo
 
 mixin logo-jb
