--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -26,6 +26,7 @@ html(class='no-js')
 		include ../_modules/header.pug
 		include ../_modules/footer.pug
 		include ../_modules/project-mixin.pug
+		include ../_modules/about-mixin.pug
 		//- content
 		#main-wrapper
 			block content
