--- a/dev/scss/global/_buttons.scss
+++ b/dev/scss/global/_buttons.scss
@@ -43,7 +43,7 @@
 
 // center btn
 .btn-pages{
-	position: absolute;
+	position: fixed;
 	bottom: 10px;
 	left: 10px;
 	@media (min-width: 768px) {
@@ -167,9 +167,12 @@ nav.slider-wrapper{
 		background-color: $orange;
 		display: block;
 		border-radius: 50%;
-		margin-bottom: 33px;
-		margin-left: 30px;
+		// margin-bottom: 33px;
+		// margin-left: 30px;
+		margin: 16px 0 16px;
 		position: relative;
+		// transition: all .25s;
+		cursor: pointer;
 		&:before{
 			content: "";
 			width: 5px;
@@ -181,8 +184,10 @@ nav.slider-wrapper{
 			border-radius: 50%;
 			border:solid 2px $orange;
 			opacity: 0;
+			@include transitions-ease(.4s);
 		}
-		&:hover{
+		&:hover,
+		&:active{
 			background-color: transparent;
 			&:before{
 				opacity: 1;
