--- a/dev/scss/modules/_footer.scss
+++ b/dev/scss/modules/_footer.scss
@@ -2,6 +2,7 @@ footer{
 	position: absolute;
 	display: none;
 	z-index: 1000;
+	position: fixed;
 	@media (min-width: 768px){
 		bottom: 0;
 		left: 0;
