--- a/dev/scss/views/_ourwork.scss
+++ b/dev/scss/views/_ourwork.scss
@@ -5,58 +5,158 @@
 	background-image: url("../img/work_background.jpg");
 	background-size: 500%;
 	background-position: 50% 15%;
+	position: fixed;
 	@media(min-width: 768px){
 		background-size: 100%;
 		background-position: 0% 30%;
 	}
 }
 .works-list{
-	padding-top: 40px;
+	padding: 47px 0 63px;
+	@media(min-width: 768px){
+		padding: 50px 0;
+	}
 }
 
 // project
 .project-wrapper{
-	margin-top: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	color: $cream;
+	opacity: .3;
+	// background: pink;
 	p.number-project{
 		font-size: 16px;
 		font-family: 'TitlingGothicFB light';
-		color: red;
 		// background: red;
 	}
 	@media(min-width: 768px){
-		margin-top: 100px;
+		padding-top: 50px;
+		padding-bottom: 50px;
 		p.number-project{
 			font-size: 22px;
 		}
 	}
+	// name
 	.name-project{
 		margin: 10px 0;
 		font-family: 'Nocturne Serif ExtraBold';
-		font-size: 22px;
+		// overflow: hidden;
 		// background-color: green;
 		h2{
+			font-size: 22px;
 			display: block;
+			// transform: translateY(0px);
 		}
 		@media(min-width: 768px){
 			margin: 20px 0 26px;
-			font-size: 50px;
 			h2{
+				font-size: 50px;
 				display: inline-block;
-				// float: left;
+				&:last-child{
+					margin-left: 5px;
+				}
 			}
 		}
 	}
 	// arrow
 	a.arrow-right-long{
-		float: right;
 		color: $cream;
-		background-color: cyan;
-		.rectangle-arrow{
-			display: inline-block;
-			width: 300px;
-			height: 2px;
-			background: red;
+		// background-color: firebrick;
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		@media(min-width: 992px){
+			// padding-right: 62px;quitar o no------------------------
+		}
+		.arrow-wrapper{
+			// background: purple;
+			position: relative;
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-end;
+			align-items: center;
+			width: 110px;
+			.rectangle-arrow{
+				display: inline-block;
+				height: 2px;
+				width: 81.99px;
+				margin-right: 1px;
+				background: $cream;
+			}
+			@media(min-width: 768px){
+				width: 320px;
+				.rectangle-arrow{
+					width: 291.99px;
+				}
+			}
+			svg.icon-arrow{
+				flex-shrink: 0;
+				width: 7px;
+				height: 12px;
+			}
+		}
+		// quitar, no quitar----------------
+		span{
+			width: 120px;
+			@media(min-width: 992px){
+				width: 202px;
+			}
 		}
 	}
+
+	&:hover{
+		opacity: 1;
+		cursor: pointer;
+		@include transitions-ease(.4s);
+		.up-translate{
+			// transform: translateY(30px);
+			-webkit-animation: upTranslate .6s cubic-bezier(.25,0,0,.8); /* Safari 4.0 - 8.0 */
+			animation: upTranslate .6s cubic-bezier(.25,0,0,.8);
+		}
+		.right-translate{
+			-webkit-animation: rightTranslate .6s cubic-bezier(.21,0,0,1); /* Safari 4.0 - 8.0 */
+			animation: rightTranslate .6s cubic-bezier(.21,0,0,1);
+		}
+		.rectangle-arrow{
+			-webkit-animation: editRectArrow .6s cubic-bezier(.21,0,0,1); /* Safari 4.0 - 8.0 */
+			animation: editRectArrow .6s cubic-bezier(.21,0,0,1);
+		}
+
+	}
+}
+
+// up text translate
+@-webkit-keyframes upTranslate {
+	0% {transform:translateY(20px); opacity: .01}
+	100% {opacity: 1}
+}
+
+@keyframes upTranslate {
+	0% {transform:translateY(20px); opacity: .01}
+	100% {opacity: 1}
+}
+
+// right box translate
+@-webkit-keyframes rightTranslate {
+	0% {transform:translateX(-30px);}
+	100% {opacity: 1}
+}
+
+@keyframes rightTranslate {
+	0% {transform:translateX(-30px); opacity: .01}
+	100% {opacity: 1}
+}
+
+// right box translate
+@-webkit-keyframes editRectArrow {
+	0% {width: calc(100%); opacity: .01;}
+	100% {opacity: 1}
+}
+
+/* Standard syntax */
+@keyframes editRectArrow {
+	0% {width: calc(100%); opacity: .01;}
+	100% {opacity: 1}
 }
