--- a/dev/assets/about.pug
+++ b/dev/assets/about.pug
@@ -1,7 +1,7 @@
 extends _templates/layout.pug
 
 block content
-	.about-section.snj-container
+	.about-section.snj-container-fluid
 		.row
 			//- background shader wrapper
 			.bg-wrapper-shader.about-bg
@@ -18,7 +18,7 @@ block content
 						li.dot-slider
 
 				//- about
-				+about-component("hola", "Our Moto", "Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod temp orert incididunt ut labore et dolore magnesiume aliqua. Sagittis alm malesuada barracuda bibendum arcu", "/", "/", "/")
+				+about-component("Founded by brand creators", "Our Moto", "Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod temp orert incididunt ut labore et dolore magnesiume aliqua. Sagittis alm malesuada barracuda bibendum arcu", "/", "/", "/")
 
 	a(href="ourwork.html")
 		button.btn-wrapper.btn-pages
