--- a/dev/assets/_modules/icons.pug
+++ b/dev/assets/_modules/icons.pug
@@ -62,20 +62,20 @@ mixin video-exit-icon
 //- social media icons
 //- instagram
 mixin ins-icon
-	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24" viewBox="0 0 24 24")
-		ellipse(cx="18.4" cy="5.5" rx="1.5" ry="1.4")
-		path(d="M12,5.8c-3.3,0-6.1,2.7-6.1,6.1c0,3.3,2.7,6.1,6.1,6.1s6.2-2.7,6.2-6.1S15.3,5.8,12,5.8z M12,15.9c-2.2,0-4-1.8-4-4s1.8-4,4-4s4,1.8,4,4C15.9,14.1,14.2,15.9,12,15.9z")
-		path(d="M22.1,2c-1.3-1.3-3-2-5.1-2H7.1C2.8,0,0,2.9,0,7V17c0,2.1,0.6,3.9,2,5.1C3.3,23.4,5.1,24,7.1,24h9.9c2,0,3.8-0.6,5.1-1.9c1.3-1.3,2-3.1,2-5.1V7C24,5,23.4,3.3,22.1,2z M21.8,17c0,1.4-0.5,2.7-1.4,3.5c-0.8,0.8-2.1,1.3-3.5,1.3H7.1c-1.5,0-2.6-0.5-3.5-1.3c-0.9-0.9-1.4-2.2-1.4-3.6V6.9c0-1.4,0.5-2.7,1.3-3.5C4.3,2.6,5.6,2.2,7,2.2h9.9c1.5,0,2.7,0.5,3.6,1.4c0.8,0.9,1.3,2.1,1.3,3.5L21.8,17L21.8,17z")
+	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20" height="20" viewBox="0 0 20 20")
+		ellipse(cx="15.3" cy="4.6" rx="1.2" ry="1.2")
+		path(d="M10,4.8c-2.7,0-5.1,2.2-5.1,5.1c0,2.8,2.2,5.1,5.1,5.1s5.1-2.2,5.1-5.1S12.7,4.8,10,4.8z M10,13.2c-1.8,0-3.3-1.5-3.3-3.3S8.1,6.6,10,6.6s3.3,1.5,3.3,3.3C13.2,11.8,11.8,13.2,10,13.2z")
+		path(d="M18.3,1.7C17.3,0.6,15.9,0,14.1,0H5.9C2.3,0,0,2.4,0,5.8v8.3c0,1.8,0.5,3.2,1.7,4.3C2.7,19.5,4.2,20,5.9,20h8.2c1.7,0,3.2-0.5,4.2-1.6c1.1-1.1,1.7-2.6,1.7-4.3V5.8C19.9,4.2,19.4,2.8,18.3,1.7z M18.1,14.2c0,1.2-0.4,2.3-1.2,2.9c-0.7,0.7-1.7,1.1-2.9,1.1H5.9c-1.2,0-2.2-0.4-2.9-1.1c-0.7-0.8-1.2-1.8-1.2-3V5.8c0-1.2,0.4-2.3,1.1-2.9c0.7-0.7,1.7-1,2.9-1H14c1.2,0,2.2,0.4,3,1.2c0.7,0.8,1.1,1.8,1.1,2.9V14.2L18.1,14.2z")
 
 //- linkedin
 mixin link-icon
-	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="24" viewBox="0 0 24 24" xml:space="preserve")
-		path(d="M22.1,0H1.8C0.8,0,0,0.8,0,1.7v20.4c0,1,0.8,1.7,1.8,1.7h20.4c1,0,1.8-0.8,1.8-1.7V1.7C23.9,0.8,23.1,0,22.1,0zM7.1,20.4H3.5V9h3.5C7.1,9,7.1,20.4,7.1,20.4zM5.3,7.4c-1.1,0-2.1-0.9-2.1-2.1s0.9-2.1,2.1-2.1s2.1,0.9,2.1,2.1S6.4,7.4,5.3,7.4z M20.4,20.4h-3.5v-5.5c0-1.3,0-3-1.8-3c-1.8,0-2.1,1.4-2.1,2.9v5.6H9.3V9h3.4v1.6h0c0.5-0.9,1.6-1.8,3.4-1.8c3.6,0,4.3,2.4,4.3,5.4C20.4,14.1,20.4,20.4,20.4,20.4z")
+	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20" height="20" viewBox="0 0 20 20" xml:space="preserve")
+		path(d="M18.4,0H1.5C0.7,0,0,0.7,0,1.4v17c0,0.8,0.7,1.4,1.5,1.4h17c0.8,0,1.5-0.7,1.5-1.4v-17C19.9,0.7,19.3,0,18.4,0z M5.9,17h-3V7.5h2.9C5.9,7.5,5.9,17,5.9,17z M4.4,6.2c-0.9,0-1.7-0.8-1.7-1.8s0.8-1.7,1.7-1.7s1.8,0.8,1.8,1.7S5.3,6.2,4.4,6.2z M17,17h-2.9v-4.6c0-1.1,0-2.5-1.5-2.5s-1.8,1.2-1.8,2.4V17H7.8V7.5h2.8v1.3l0,0c0.4-0.7,1.3-1.5,2.8-1.5c3,0,3.6,2,3.6,4.5C17,11.8,17,17,17,17z")
 
 //- twitter
 mixin tw-icon
-	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30.01px" height="24" viewBox="0 0 30.1 24" xml:space="preserve")
-		path(d="M27,6c0,0.3,0,0.5,0,0.8c0,8-6.2,17.2-17.5,17.2c-3.5,0-6.7-1-9.4-2.7c0.5,0.1,1,0.1,1.5,0.1c2.9,0,5.5-1,7.7-2.6c-2.7,0-5-1.8-5.7-4.2c0.4,0.1,0.8,0.1,1.2,0.1c0.6,0,1.1-0.1,1.6-0.2c-2.8-0.6-4.9-3-4.9-5.9c0,0,0,0,0-0.1c0.8,0.5,1.8,0.7,2.8,0.8c-1.7-1.1-2.7-2.9-2.7-5c0-1.1,0.3-2.1,0.8-3c3,3.7,7.6,6.1,12.7,6.3c-0.1-0.4-0.2-0.9-0.2-1.4c0-3.3,2.8-6.1,6.2-6.1c1.8,0,3.4,0.7,4.5,1.9c1.4-0.3,2.7-0.8,3.9-1.5c-0.5,1.4-1.4,2.6-2.7,3.3c1.2-0.2,2.4-0.5,3.5-1C29.3,4,28.2,5.1,27,6z")
+	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25.27" height="20" viewBox="0 0 25.27 20" xml:space="preserve")
+		path(d="M22.5,4.9c0,0.3,0,0.4,0,0.7c0,6.7-5.2,14.4-14.6,14.4c-2.9,0-5.6-0.8-7.9-2.3c0.4,0.1,0.8,0.1,1.3,0.1c2.4,0,4.6-0.8,6.4-2.2c-2.3,0-4.2-1.5-4.8-3.5c0.3,0.1,0.7,0.1,1,0.1c0.5,0,0.9-0.1,1.3-0.2c-2.3-0.5-4.1-2.5-4.1-4.9c0,0,0,0,0-0.1c0.7,0.4,1.5,0.6,2.3,0.7C2.1,6.8,1.3,5.3,1.3,3.5c0-0.9,0.3-1.8,0.7-2.5c2.5,3.1,6.4,5.1,10.6,5.3c-0.1-0.3-0.2-0.8-0.2-1.2c0-2.8,2.3-5.1,5.2-5.1c1.5,0,2.8,0.6,3.8,1.6c1.2-0.3,2.3-0.7,3.3-1.3c-0.4,1.2-1.2,2.2-2.3,2.8c1-0.2,2-0.4,2.9-0.8C24.4,3.3,23.5,4.2,22.5,4.9z")
 //- logo
 
 mixin logo-jb
