--- a/dev/scss/global/_buttons.scss
+++ b/dev/scss/global/_buttons.scss
@@ -158,37 +158,47 @@ a{
 		}
 	}
 }
-
-// list slider btn
+// list dot slider
 nav.slider-wrapper{
 	li.dot-slider{
-		width: 5px;
-		height: 5px;
-		background-color: $orange;
 		display: block;
-		border-radius: 50%;
-		// margin-bottom: 33px;
-		// margin-left: 30px;
-		margin: 16px 0 16px;
 		position: relative;
-		// transition: all .25s;
+		// background-color: green;
+		position: relative;
+		padding:16px;
 		cursor: pointer;
-		&:before{
+
+		&:after{
 			content: "";
+			display: block;
+			position: relative;
 			width: 5px;
 			height: 5px;
-			position: absolute;
-			top: -2px;
-			left: -2px;
-			z-index: -1;
+			background: $orange;
 			border-radius: 50%;
+			@include transitions-ease(.4s);
+		}
+		&:before{
+			content: "";
+			display: block;
+			position: absolute;
+			width: 5px;
+			height: 5px;
+			z-index: -1;
 			border:solid 2px $orange;
 			opacity: 0;
+			border-radius: 50%;
+			top: 0; bottom: 0;
+			left: 0; right: 0;
+			margin: auto;
 			@include transitions-ease(.4s);
 		}
 		&:hover,
 		&:active{
 			background-color: transparent;
+			&:after{
+				opacity: 0;
+			}
 			&:before{
 				opacity: 1;
 			}
