--- a/dev/scss/views/_about.scss
+++ b/dev/scss/views/_about.scss
@@ -11,74 +11,120 @@
 	background-size: cover;
 	z-index: -1
 }
+
 .about-wrapper{
 	position: relative;
 	width: 100%;
+	@media(992px){	
+		display: flex;
+		flex-direction: row;
+		align-items: flex-start;
+		flex-wrap: wrap;
+	}
+
 	// background: red;
 	.slider-wrapper{
+		z-index: 1;
 		position: absolute;
-		right: 30px;
+		right: 0;
 		top: 50%;
 		transform: translateY(-50%);
+		// @media(min-width: 992px){
+		// 	li.dot-slider{
+		// 		padding-right: 0;
+		// 	}
+		// }
 	}
 }
+
 // about component
 .about-component{
 	font-family: 'TitlingGothicFB light';
 	color: $cream;
-	h1{
-		font-family: 'Nocturne Serif ExtraBold';
-		font-size: 22px;
-		margin-bottom: 20px;
-		letter-spacing: 1px;
+	@media(min-width: 992px){
+		display: flex;
 	}
-	h2{
-		font-size: 16px;
-		// padding: 10px 0;
-	}
-	@media(min-width: 768px){
+
+	.header-about{
+		// background: green;
+		position: relative;
+		display: inline-block;
 		h1{
-			font-size: 50px;
+			font-family: 'Nocturne Serif ExtraBold';
+			font-size: 22px;
+			margin-bottom: 20px;
+			letter-spacing: 1px;
+			word-wrap: break-word;
 		}
 		h2{
-			font-size: 22px;
+			font-size: 16px;
+		}
+		@media(min-width: 992px){
+			h1{
+				font-size: 50px;
+			}
+			h2{
+				font-size: 22px;
+				position: absolute;
+				top: -28px;
+				left: 0;
+				// background: red;
+				line-height: 0;
+			}
 		}
 	}
 
-	// line
-	.separator-line{
-		margin-top: 20px;
-		margin-bottom: 20px;
-		background-color: $cream;
-		display: block;
-		width: 20px;
-		height: 2px;
-	}
+	section.about-info{
+		position: relative;
+		display: inline-block;
+		// background-color: pink;
+		.separator-line{
+			width: 20px;
+			height: 2px;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			background-color: $cream;
+			display: block;
+			@media(min-width: 992px){
+				position: absolute;
+				margin: 0;
+				top: -22px;
+			}
+		}
 
-	section.text-about{
-		line-height: 15px;
-		// background: darkslategray;
 		p{
+			width: 100%;
+			padding-left: 12.5%;
+			line-height: 15px;
 			letter-spacing: 1px;
-			// padding-top: 10px;
-			// background: red;
+			margin-bottom: 20px;
+			@media(min-width: 992px){
+				padding-left: 0;
+			}
 		}
-	}
 
-	section.social-wrapper{
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		// background-color: blue;
-		padding-top: 20px;
-		a{
-			padding-right: 6px;
-			svg{
-				fill: $cream;
-				@include transitions-ease(.3s);
-				&:hover{
-					fill: $white;
+		.social-wrapper{
+			width: 100%;
+			padding-left: 12.5%;
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			padding-top: 11px;
+			// background: red;
+			a{
+				padding-right: 6px;
+				svg{
+					fill: $cream;
+					@include transitions-ease(.3s);
+					&:hover{
+						fill: $white;
+					}
 				}
+			}
+			@media(min-width: 992px){
+				padding-top: 28px;
+				padding-left: 0;
+				padding-right: 33.33%;
 			}
 		}
 	}
