work sections responsive

--- a/dev/assets/_modules/project-mixin.pug
+++ b/dev/assets/_modules/project-mixin.pug
@@ -4,7 +4,7 @@ mixin project-intro(number, name1, name2, linkTo, callTo)
 		.name-project 
 			h2.up-translate #{name1}
 			h2.up-translate #{name2}
-		a.arrow-right-long.right-translate(href=linkTo)
+		a.arrow-right.right-translate(href=linkTo)
 			.arrow-wrapper
 				.rectangle-arrow
 				+icon-arrow
