--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -27,6 +27,7 @@ html(class='no-js')
 		include ../_modules/footer.pug
 		include ../_modules/project-mixin.pug
 		include ../_modules/about-mixin.pug
+		include ../_modules/project-sections.pug
 		//- content
 		#main-wrapper
 			block content
