--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -1,7 +1,7 @@
 extends _templates/layout.pug
 
 block content
-	.work-section.snj-container-fluid
+	.ourwork.snj-container-fluid
 		.row
 			//- background shader wrapper
 			.bg-wrapper-shader.work-bg
