--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -16,6 +16,7 @@
 @import 'views/_home';
 @import 'views/_ourwork';
 @import 'views/_about';
+@import 'views/_ourwork-sections';
 
 @import 'modules/_header';
 @import 'modules/_nav';
