responsive ipad home(medidas dadas propias) about arreglo de texto no wrap

--- a/dev/assets/about.pug
+++ b/dev/assets/about.pug
@@ -4,7 +4,7 @@ block content
 	.about-section.snj-container-fluid
 		.row
 			//- background shader wrapper
-			.bg-wrapper-shader.about-bg
+			.background-wrapper.about-bg
 
 			.about-wrapper
 
