--- a/dev/assets/index.pug
+++ b/dev/assets/index.pug
@@ -2,7 +2,7 @@ extends _templates/layout.pug
 
 block content
 	.index-wrapper
-		.bg-wrapper-shader.home-bg
+		.background-wrapper.home-bg
 
 		//- mobile display
 		.display-wrapper
@@ -20,5 +20,4 @@ block content
 	a(href="ourwork.html")
 		button.btn-wrapper.btn-pages
 			span.btn-animate-up Our Work
-			//- span.btn-animate-up
-			//- 	+close-icon
+		
