--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -4,7 +4,7 @@ block content
 	.ourwork.snj-container-fluid
 		.row
 			//- background shader wrapper
-			.bg-wrapper-shader.work-bg
+			.background-wrapper.work-bg
 			//- projects wrapper
 			.works-list.snj-col-10.offset-1.snj-col-md-8.offset-md-2
 				.wrap-project-wrapper
