contact page responsive

--- a/dev/assets/_modules/project-mixin.pug
+++ b/dev/assets/_modules/project-mixin.pug
@@ -8,4 +8,5 @@ mixin project-intro(number, name1, name2, linkTo, callTo)
 			.arrow-wrapper
 				.rectangle-arrow
 				+icon-arrow
-			span #{callTo}
+			span.callTo-1 #{callTo}
+			span.callTo-2 See Case
