--- a/dev/assets/_modules/project-sections.pug
+++ b/dev/assets/_modules/project-sections.pug
@@ -1,10 +1,10 @@
 mixin project-sections(subtitle, title, number, linkTo)
 	.center-wrapper
-		.about-work.snj-col-9.offset-2.snj-col-lg-3
+		.about-work
 			h2 #{subtitle}
 			h1 #{title}
 			p #{number}
-		.offset-2.snj-col-8.snj-col-lg-2
+		.arrow-container
 			a.arrow-right.right-translate(href=linkTo)
 				.arrow-wrapper
 					.rectangle-arrow
