--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -17,7 +17,9 @@
 @import 'views/_ourwork';
 @import 'views/_about';
 @import 'views/_ourwork-sections';
+@import 'views/_contact';
 
 @import 'modules/_header';
 @import 'modules/_nav';
-@import 'modules/_footer'
+@import 'modules/_footer';
+@import 'modules/_grid-lines';
