--- a/dev/scss/global/_buttons.scss
+++ b/dev/scss/global/_buttons.scss
@@ -48,7 +48,7 @@
 	left: 10px;
 	@media (min-width: 768px) {
 		top: 50%;
-		left: 40px;
+		left: 45px;
 		transform: translateY(-50%);
 	}
 }
@@ -163,12 +163,10 @@ a{
 	}
 
 	span{
-		width: 120px;
+		// width: 120px;
 		margin-left: 12px;
 		font-size: 12px;
-		@media(min-width: 992px){
-			width: 202px;
-			margin-left: 30px;
+		@media(min-width: 768px){
 			font-size: 16px;
 		}
 	}
