--- a/dev/scss/global/_default.scss
+++ b/dev/scss/global/_default.scss
@@ -20,3 +20,9 @@ body, h1, h2, h3, h4, h5, h6, p, section, div, nav, ul, li, button{
 	width: 100%;
 	height: 100%;
 }
+
+ul{
+	li{
+		list-style: none;
+	}
+}
