--- a/dev/scss/global/_grid.scss
+++ b/dev/scss/global/_grid.scss
@@ -3,13 +3,7 @@
 
 // Added "snj-" prefix to
 // container, row, cols
-.grid-line{
-  [class*="snj-col-"]{
-    border-right: solid 1px red;
-    border-left: solid 1px red;
-    // height: 100%;
-  }
-}
+
 .snj-container {
   width: 100%;
   margin-right: auto;
@@ -53,8 +47,8 @@
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-right: - $snj-grid__gutterHalfWidth;
-  margin-left: - $snj-grid__gutterHalfWidth;
+  // margin-right: - $snj-grid__gutterHalfWidth;
+  // margin-left: - $snj-grid__gutterHalfWidth;
 }
 
 .no-gutters {
