--- a/dev/scss/views/_about.scss
+++ b/dev/scss/views/_about.scss
@@ -28,11 +28,6 @@
 		right: 0;
 		top: 50%;
 		transform: translateY(-50%);
-		// @media(min-width: 992px){
-		// 	li.dot-slider{
-		// 		padding-right: 0;
-		// 	}
-		// }
 	}
 }
 
@@ -65,7 +60,7 @@
 				font-size: 22px;
 				position: absolute;
 				top: -28px;
-				left: 0;
+				left: -96px;
 				// background: red;
 				line-height: 0;
 			}
@@ -122,7 +117,10 @@
 			@media(min-width: 992px){
 				padding-top: 28px;
 				padding-left: 0;
-				padding-right: 33.33%;
+				padding-right: 34.333333%;
+				a{
+					padding-right: 0px;
+				}
 			}
 		}
 	}
