--- a/dev/scss/views/_ourwork-sections.scss
+++ b/dev/scss/views/_ourwork-sections.scss
@@ -1,7 +1,7 @@
 .ourwork-sections-detail{
 	height: 100%;
 	width: 100%;
-	padding: 0;
+	padding: 0
 }
 // background
 .background-wrapper{
@@ -18,6 +18,7 @@
 .worksections-bg{
 	background-image: url("../img/bg-work-section.jpg");
 }
+
 //wrapper project section
 .sections-p-wrapper{
 	position: relative;
@@ -27,13 +28,17 @@
 	flex-direction: column;
 	justify-content: center;
 	color: $cream;
+	padding: 0 10px;
 	@media(min-width: 992px){
 		height: 50vh;
-		width: 83.34%;
+		width: calc(83.34% - 32px);
+		// width: 100%;
 		float: right;
 		white-space: nowrap;
+		padding:0 40px 0 0;
 	}
 	.center-wrapper{
+		width: 100%;
 		@media(min-width: 992px){
 			display: flex;
 			align-items: center;
@@ -42,19 +47,22 @@
 	// mixin wrapper project section
 	.about-work{
 		position: relative;
+		// background-color: red;
+		margin-left: 16.666667%;
+		width: 75%;
 		@media(min-width: 768px){
 			display: inline-block;
+			margin-left: 20%;
+			width: 30%;
+			// background: red
 		}
 		h2{
-			font-family: 'TitlingGothicFB Standar';
+			font-family: 'TitlingGothicFB light';
 			font-size: 12px;
 			padding-bottom: 10px;
 			width: 55.55%;
 			position: relative;
 			z-index: 10;
-			@media(min-width:768px){
-				width: 66.66%;
-			}
 		}
 		h1{
 			font-family: 'Nocturne Serif ExtraBold';
@@ -63,6 +71,7 @@
 			letter-spacing: .1px;
 			position: relative;
 			z-index: 10;
+			width: 100%;
 			@media(min-width: 768px){
 				padding-bottom: 28px;
 				font-size: 30px;
@@ -75,28 +84,35 @@
 			font-size: 120px;
 			color: $black;
 			text-align: left;
-			// letter-spacing: 20px;
-			letter-spacing: .1em;
 			line-height: 73px;
 			position: absolute;
-			left: 22.22%;
+			left: calc(22.22% - 5px);
 			bottom: 0;
-			transform: translateX(-5px);
 			@media(min-width: 768px){
-				left: 33.33%;
 				font-size: 165px;
 				line-height: 102px;
-				transform: translateX(-8px);
+				transform: translateX(-2px);
+				left: 33%;
 			}
 		}
 	}
-
+	.arrow-container{
+		margin-left: 16.666667%;
+		width: 66.666667%;
+		@media(min-width: 768px){
+			margin-left: 20%;
+			width: 30%;
+		}
+		@media(min-width: 998px){
+			margin-left: 20%;
+			padding-left: 3px;
+		}
+	}
 	a.arrow-right{
 		padding-top: 20px;
 		transform: translateX(-20px);
 		// background-color: red;
 		@media(min-width: 992px){
-			// transform: translateX(0);
 			padding: 0;
 		}
 	}
