--- a/dev/scss/views/_ourwork.scss
+++ b/dev/scss/views/_ourwork.scss
@@ -12,9 +12,11 @@
 	}
 }
 .works-list{
-	padding: 47px 0 63px;
+	padding-top: 47px;
+	padding-bottom: 63px;
 	@media(min-width: 768px){
-		padding: 50px 0;
+		padding-top: 50px;
+		padding-bottom: 50px;
 	}
 }
 
@@ -23,7 +25,7 @@
 	padding-top: 10px;
 	padding-bottom: 10px;
 	color: $cream;
-	opacity: .3;
+	opacity: 1;
 	// background: pink;
 	p.number-project{
 		font-size: 16px;
@@ -33,6 +35,7 @@
 	@media(min-width: 768px){
 		padding-top: 50px;
 		padding-bottom: 50px;
+		opacity: .3;
 		p.number-project{
 			font-size: 22px;
 		}
@@ -65,6 +68,23 @@
 				width: 320px;
 				.rectangle-arrow{
 					width: 291.99px;
+				}
+			}
+		}
+		span{
+			&.callTo-1{
+				display: none;
+				@media(min-width: 992px){
+					width: 190px;
+					margin-left: 30px;
+					font-size: 16px;
+					display: block;
+				}
+			}
+			&.callTo-2{
+				display: block;
+				@media(min-width: 992px){
+					display: none;
 				}
 			}
 		}
