contact, message, thanks section responsive

--- a/dev/assets/_modules/about-mixin.pug
+++ b/dev/assets/_modules/about-mixin.pug
@@ -1,8 +1,8 @@
 mixin about-component(name, subtitle, about, linkedin, tw, ig)
 	.about-component
 		section.header-about.snj-col-9.offset-1.offset-md-3.snj-col-lg-3.offset-lg-3
-			h1 #{name}
-			h2 #{subtitle}
+			h1.title-block #{name}
+			h2.subtitle-block #{subtitle}
 
 
 		section.about-info.snj-col-8.offset-1.snj-col-md-6.offset-md-3.snj-col-lg-3.offset-lg-1
