--- a/dev/assets/_modules/project-mixin.pug
+++ b/dev/assets/_modules/project-mixin.pug
@@ -1,4 +1,4 @@
-mixin project-intro(number, name1, name2, linkTo, callTo)
+mixin project-intro(number, name1, name2, linkTo, callTo, callTo2)
 	.project-wrapper
 		p.number-project.up-translate #{number}
 		.name-project 
@@ -9,4 +9,4 @@ mixin project-intro(number, name1, name2, linkTo, callTo)
 				.rectangle-arrow
 				+icon-arrow
 			span.callTo-1 #{callTo}
-			span.callTo-2 See Case
+			span.callTo-2 #{callTo2}
