--- a/dev/assets/about.pug
+++ b/dev/assets/about.pug
@@ -1,7 +1,7 @@
 extends _templates/layout.pug
 
 block content
-	.about-section.snj-container-fluid
+	.about-section.snj-container-fluid.flex-column
 		.row
 			//- background shader wrapper
 			.background-wrapper.about-bg
