--- a/dev/assets/contact.pug
+++ b/dev/assets/contact.pug
@@ -15,10 +15,14 @@ block content
 				aside.social-block.snj-col-4.offset-1.snj-col-lg-1.offset-lg-1
 					h2.subtitle-block Social
 					ul
-						li Instagram
-						li Facebook
-						li Twitter
-						li Linkedin
+						li
+							a(href="#") Instagram
+						li
+							a(href="#") Facebook
+						li
+							a(href="#") Twitter
+						li
+							a(href="#") Linkedin
 
 				aside.info-block-wrapper.snj-col-4.offset-2.snj-col-md-9.offset-md-1
 					.info-block
