--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -8,12 +8,12 @@ block content
 			//- projects wrapper
 			.works-list.snj-col-10.offset-1.snj-col-md-8.offset-md-2
 				.wrap-project-wrapper
-					+project-intro("01", "Content /", " & Campaign Creation", "/","See case")
-					+project-intro("02", "Event curation ", " & Design","/", "Let’s talk")
-					+project-intro("02", "Event curation ", " & Design",",", "See case")
-					+project-intro("04", "Social Media ", " (360º)","/", "See case studies")
-					+project-intro("05", "Digital ", " Web Design","/", "See case studies")
-					+project-intro("06", "Drop us ", "a line","/", "Let’s talk.")
+					+project-intro("01", "Content /", " & Campaign Creation", "/","See case", "See case")
+					+project-intro("02", "Event curation ", " & Design","/", "Let’s talk", "See case")
+					+project-intro("02", "Event curation ", " & Design",",", "See case", "See case")
+					+project-intro("04", "Social Media ", " (360º)","/", "See case studies", "See case")
+					+project-intro("05", "Digital ", " Web Design","/", "See case studies", "See case")
+					+project-intro("06", "Drop us ", "a line","/", "Let’s talk", "See case")
 	button.btn-wrapper.btn-pages(onclick="history.back()")
 		span.btn-animate-up
 			+close-icon
