--- a/dev/scss/views/_contact.scss
+++ b/dev/scss/views/_contact.scss
@@ -1,19 +1,3 @@
-h2.subtitle-block{
-	color: $dark-brown;
-	font-size: 16px;
-	font-family: 'TitlingGothicFB light';
-	@media(min-width: 768px){
-		font-size: 22px;
-	}
-}
-h1.title-block{
-	color: $black;
-	font-size: 22px;
-	font-family: 'Nocturne Serif ExtraBold';
-	@media(min-width: 768px){
-		font-size: 50px
-	}
-}
 
 .contact-section{
 	background-color: $brown;
@@ -25,18 +9,19 @@ h1.title-block{
 		margin-bottom: 20px;
 	}
 }
-.center-wrapper{
-	display: flex;
-	flex-wrap: wrap;
-}
+
 .about-block{
 	// background-color: red;
 	position: relative;
 	h1{
+		color: $black;
 		padding-left: 10%;
 	}
-	h2.sub-1{display: block;}
-	h2.sub-2{display: none}
+	h2{
+		color: $dark-brown;
+		&.sub-1{display: block;}
+		&.sub-2{display: none}
+	}
 	.arrow-container{
 		padding-left: 10%;
 		margin-bottom: 40px;
@@ -79,16 +64,23 @@ h1.title-block{
 		}
 	}
 }
+
 .social-block{
 	display: inline-block;
 	ul{
 		padding-left: 25%;
 	}
 	li{
-		color: $black;
-		font-size: 12px;
-		font-family: 'TitlingGothicFB Standar';
 		margin-bottom: 10px;
+		a{
+			font-size: 12px;
+			font-family: 'TitlingGothicFB Standar';
+			color: $black;
+			@include transitions-ease(.4s)
+			&:hover{
+				color: $cream
+			}
+		}
 	}
 	@media(min-width: 768px){
 		ul{
@@ -96,6 +88,7 @@ h1.title-block{
 		}
 	}
 }
+
 .info-block-wrapper{
 	display: inline-block;
 	color: $dark-brown;
