--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -22,6 +22,7 @@
 @import 'views/_contact';
 @import 'views/_message';
 @import 'views/_thanks';
+@import 'views/_project-page';
 
 @import 'modules/_header';
 @import 'modules/_nav';
