--- a/dev/assets/project-page.pug
+++ b/dev/assets/project-page.pug
@@ -42,7 +42,7 @@ block content
 				button.btn-circle
 					+video-play-icon
 					+video-pause-icon
-			footer.footer-project
+			section.footer-project
 				.snj-col-md-1
 					a.arrow-up(href="")
 						span.light-font Next Case
