--- a/dev/assets/project-page.pug
+++ b/dev/assets/project-page.pug
@@ -5,11 +5,11 @@ block content
 		.snj-row
 			section.project-about
 				//- .background-wrapper.p-about-bg
-				.info-wrapper.snj-col-10.offset-1.snj-col-md-4
+				.info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
 					h2.subtitle-block Social content & Graphic Design
 					h1.title-block Puma Middle East
 					span 01
-				aside.especifications.snj-col-10.snj-col-md-6.offset-1
+				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					div.especific-item
 						h4 Cliente
 						h5 Puma						
@@ -47,12 +47,13 @@ block content
 					a.arrow-up(href="")
 						span.light-font Next Case
 						+next-arrow-90
-				.snj-col-md-4
+				.snj-col-md-4.snj-col-8.offset-2
 					p Next Project
 					h3 Amongst Few
 					h4 Branding & Interior Design
+					a(href="") See case
 				.snj-col-md-1
 					a.arrow-up(href="")
 						span.light-font Next Case
 						+next-arrow-90
-				p © Copyright 2019
+				p.copyright © Copyright 2019
