--- a/dev/scss/global/_buttons.scss
+++ b/dev/scss/global/_buttons.scss
@@ -179,15 +179,15 @@ a{
 	border-radius: 50%;
 	background-color: transparent;
 	border: solid 2px $cream;
-	&:hover{
-		background-color: $cream;
-		color: $cream;
-		// svg{
-		// 	path, rect{
-		// 		fill: $cream;
-		// 	}
-		// }
-	}
+	// &:hover{
+	// 	background-color: $cream;
+	// 	color: $cream;
+	// 	// svg{
+	// 	// 	path, rect{
+	// 	// 		fill: $cream;
+	// 	// 	}
+	// 	// }
+	// }
 }
 // list dot slider
 nav.slider-wrapper{
